Fixes issues with DSN lookup
